src/assets/styles/gameUI.css
.gameUI {
    & header {
        @apply bg-white;
        width: 100%;
        align-items: center;
        display: grid;
        grid-template-columns: 1fr auto 1fr;
    }

    & header button {
        @apply p-4 pt-5 pb-5;
        background: none;
        border: none;
        font-size: 1em;
    }

    & header *:nth-child(1) {
        justify-self: start;
    }

    & header *:nth-child(3) {
        justify-self: end;
    }

    & footer {
        @apply p-4;
        box-sizing: border-box;
        margin-top: auto;
    }

    /* Background */
    display: flex;
    flex-direction: column;
    height: 100vh;
    /* If you need to support browser without CSS var support (<= IE11) */
    height: calc(100vh - var(--vh-offset, 0px));
    /* enable vh fix */
    -ms-overflow-style: none;
    overflow: -moz-scrollbars-none;
    position: absolute;
    top: 0;
    left: 0;
    @apply bg-white;
    width: 100%;
    overflow-x:hidden;
}

.gameUI .wrapperMsgCenter {
    @apply flex justify-center items-center;
    flex-basis: 100%;
}

.gameUI .msgCenter {
    @apply text-red font-normal p-10 text-center text-xl normal-case;
}

.gameUI--scroll {
    overflow: auto;
    height: auto;

    & header {
        position: fixed;
    }

    & main {
        @apply pt-12;
    }
}

.wrapperImg,
.wrapperAside {
    position: relative;
    z-index: 4;
    margin: auto;
    width: 100%;
    text-align: center;
}

.wrapperImg {
    flex: 1 1 auto;
}

.wrapperAside {
    @apply pt-4 pb-4;
}

@media screen and (orientation:landscape) {
    .wrapperImg--summary {
        flex: 0 1 auto;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: auto auto auto;

        & img {
            grid-row: 1/3;
        }

        & .imgRights {
            grid-column: 2;
            grid-row: 2;
            align-self: start;
            justify-self: start;
            text-align: left;
        }

        & .imgDesc {
            grid-column: 2;
            grid-row: 1;
            justify-self: start;
            align-self: end;
            text-align: left;
        }
    }

    .wrapperImg--bravo {
        max-width: 80vw !important;
        width: 80vw !important;
    }

    .wrapperImg--bravo {
        flex: 0 1 auto;
        display: grid;
        grid-template-columns: 1fr 1fr;

        & .video-js,
        & .imgRights {
            grid-column: 1;
        }

        & .col_landscape {
            grid-column: 2;
            grid-row: 1/2;
            align-self: center;
        }

    }

}

.imgDesc,
.imgRights {
    @apply font-serif pl-4 pr-4;
}

.imgRights {
    @apply pt-2 pb-2 text-grey-light;
    font-size: 0.6em;

    & a {
        @apply no-underline text-grey-light;
    }
}

.imgDesc {
    @apply flex justify-center text-black;
    font-size: 0.8em;
}

.imgDesc time {
    @apply pr-2;
    font-weight: bold;
}

/* For portrait images */
.dragImg,
.backgroundImg,
.imageFit {
    max-height: 50vh;
    width: 100%;
    object-fit: contain;
}

@media (max-aspect-ratio: 11/16) {

    .dragImg,
    .backgroundImg,
    .imageFit {
        max-height: 56vh;
    }
}

@media (max-aspect-ratio: 10/16) {

    .dragImg,
    .backgroundImg,
    .imageFit {
        max-height: 58vh;
    }
}

@media (max-aspect-ratio: 9/16) {

    .dragImg,
    .backgroundImg,
    .imageFit {
        max-height: 62vh;
    }
}

@media (max-aspect-ratio: 8/16) {

    .dragImg,
    .backgroundImg,
    .imageFit {
        max-height: 68vh;
    }
}

.roundStats,
.textStats {
    width: calc(100% - 3rem);
    margin: auto;
}

.roundStats {
    height: 20px;
}

.textStats {
    font-size: 0.8em;
    font-weight: 600;
    padding-top: 1rem;
}

